--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="page-header__container">
         <nav class="page-header__nav">
           <a href="./index.html" lang="en" class="logo"
-            >Web<span class="logo--black">Studio</span></a
+            >Web<span class="logo logo--black">Studio</span></a
           >
           <ul class="page-header__list">
             <li class="page-header__item">
@@ -35,7 +35,7 @@
         <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
-              <svg width="16px" height="12px" class="contacts__icon--envelope">
+              <svg width="16px" height="12px" class="contacts__icon contacts__icon--envelope">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -43,7 +43,7 @@
           </li>
           <li class="contacts__item">
             <a href="tel:+380961111111" class="contacts__link">
-              <svg width="10px" height="16px" class="contacts__icon--smartphone">
+              <svg width="10px" height="16px" class="contacts__icon contacts__icon--smartphone">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -478,7 +478,7 @@
       <div class="page-footer__container">
         <div class="page-footer__contacts">
           <a href="./index.html" lang="en" class="logo page-footer__logo"
-            >Web<span class="logo--white">Studio</span></a
+            >Web<span class="logo logo--white">Studio</span></a
           >
           <address class="address">
             <ul class="address__list">
