--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
 
   <body>
     <!-------------------- header -------------------->
-    <header class="page-header">
+<header class="page-header">
       <div class="page-header__container">
-        <nav class="page-header_nav">
+        <nav class="page-header__nav">
           <a href="./index.html" lang="en" class="logo"
-            >Web<span class="logo--black">Studio</span></a
+            >Web<span class="logo logo--black">Studio</span></a
           >
           <ul class="page-header__list">
             <li class="page-header__item">
@@ -35,7 +35,7 @@
         <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
-              <svg width="16px" height="12px" class="contacts__icon--envelope">
+              <svg width="16px" height="12px" class="contacts__icon contacts__icon--envelope">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -43,7 +43,7 @@
           </li>
           <li class="contacts__item">
             <a href="tel:+380961111111" class="contacts__link">
-              <svg width="10px" height="16px" class="contacts__icon--smartphone">
+              <svg width="10px" height="16px" class="contacts__icon contacts__icon--smartphone">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -60,11 +60,11 @@
           <h1 class="work-examples__title">Приклади робіт</h1>
 
           <ul class="work-examples__list">
-            <li class="work-examples__filter"><button type="button" class="button__filter">Всі</button></li>
-            <li class="work-examples__filter"><button type="button" class="button__filter">Веб-сайти</button></li>
-            <li class="work-examples__filter"><button type="button" class="button__filter">Додатки</button></li>
-            <li class="work-examples__filter"><button type="button" class="button__filter">Дизайн</button></li>
-            <li class="work-examples__filter"><button type="button" class="button__filter">Маркетинг</button></li>
+            <li class="work-examples__filter"><button type="button" class="work-examples__button">Всі</button></li>
+            <li class="work-examples__filter"><button type="button" class="work-examples__button">Веб-сайти</button></li>
+            <li class="work-examples__filter"><button type="button" class="work-examples__button">Додатки</button></li>
+            <li class="work-examples__filter"><button type="button" class="work-examples__button">Дизайн</button></li>
+            <li class="work-examples__filter"><button type="button" class="work-examples__button">Маркетинг</button></li>
           </ul>
 
           <ul class="example-card">
@@ -291,7 +291,7 @@
       <div class="page-footer__container">
         <div>
           <a href="./index.html" lang="en" class="logo page-footer__logo"
-            >Web<span class="logo--white">Studio</span></a
+            >Web<span class="logo logo--white">Studio</span></a
           >
           <address class="address">
             <ul class="address__list">
